Fixed a layout issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -489,7 +489,7 @@ body {
 	margin-bottom:16px;
 }
 
-.no-underline * {
+.no-underline *, .no-underline {
 	text-decoration: none;
 }
 
